Change env and Entities

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-VUE_APP_ADMIN_API_BASE_URL=http://vwratings.local/api/v1/admin/
-VUE_APP_PUBLIC_PATH=/admin/
+VUE_APP_ADMIN_API_BASE_URL=http://vwratings.local/api/v1/
+VUE_APP_GTAG_KEY=G-XXMBZ96Z9Z
