--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "sass-loader": "^10.2.0",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
+    "vue-gtag": "^1.16.1",
     "vue-linkify": "^1.0.1",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.5.3",
