--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "sass-loader": "^10.2.0",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
+    "vue-google-adsense": "^1.10.1",
     "vue-gtag": "^1.16.1",
     "vue-linkify": "^1.0.1",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.5.3",
+    "vue-script2": "^2.1.0",
     "vue-star-rating": "^1.7.0",
     "vue-the-mask": "^0.11.1",
     "vuelidate": "^0.7.6",
