--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue": "^2.6.11",
     "vue-google-adsense": "^1.10.1",
     "vue-gtag": "^1.16.1",
+    "vue-lazyload": "^1.3.3",
     "vue-linkify": "^1.0.1",
     "vue-loading-overlay": "^3.4.2",
     "vue-router": "^3.5.3",
