--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass-loader": "^10.2.0",
     "v-viewer": "^1.6.4",
     "vue": "^2.6.11",
+    "vue-adblock-detector": "^1.2.4",
     "vue-google-adsense": "^1.10.1",
     "vue-gtag": "^1.16.1",
     "vue-lazyload": "^1.3.3",
